# EcoEvo

./: .gitignore  CMakeLists.txt  README.md  TODO  config-feedforward.txt  creature.py  main.py
include/: Creature.hpp  Environment.hpp  World.hpp
src/: Creature.cpp  World.cpp  main.cpp
